JQuery SIP. Fixed visibility for Comment Name and Message boxes.

--- a/style.css
+++ b/style.css
@@ -149,3 +149,7 @@ textarea {
   line-height: 1;
   visibility: hidden;
 }
+
+.postComments {
+  visibility: hidden;
+}
